<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".SettingsLoginFragment"
                                                   android:animateLayoutChanges="true">

    <TextView
            android:text="@string/settings_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/hint_textView" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="70dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/roboto_mono_medium" android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" android:visibility="invisible"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/settings_hint_uid"
            android:id="@+id/uid_textInputLayout"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/hint_textView"
            android:visibility="invisible" android:layout_marginStart="50dp" android:layout_marginEnd="50dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:fontFamily="@font/roboto_mono_medium"
                android:textSize="18sp" android:id="@+id/uid_editText" android:inputType="text"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/settings_hint_password"
            android:id="@+id/pass_textInputLayout"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/uid_textInputLayout"
            android:visibility="invisible" android:layout_marginStart="50dp" android:layout_marginEnd="50dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:fontFamily="@font/roboto_mono_medium"
                android:textSize="18sp" android:id="@+id/password_editText" android:inputType="text"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="59dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/settings_enter_password"
            android:id="@+id/check_textInputLayout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.43"
            android:layout_marginStart="50dp" android:layout_marginEnd="50dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:fontFamily="@font/roboto_mono_medium"
                android:textSize="18sp" android:id="@+id/passwordCheck_editText" android:inputType="text"
                android:textAlignment="textStart"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/check_button"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:text="@string/app_submit"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp" android:layout_marginEnd="50dp"
            app:layout_constraintHorizontal_bias="1.0"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_mono_medium"
            android:layout_marginBottom="50dp" app:layout_constraintBottom_toBottomOf="parent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>