<resources>
    <string name="app_name">SensationMeter</string>
    <string name="app_disclaimer">Caution: Investigational device. Limited to investigational use.</string>
    <string name="app_save">Save</string>
    <string name="app_submit">Submit</string>
    <string name="app_undo">Undo</string>
    <string name="app_yes">Yes</string>
    <string name="app_no">No</string>
    <string name="app_record">Record</string>
    <string name="app_sd_card_error">SD Card not found! Saving to internal memory.</string>
    <string name="menu_meter">Sensation Meter</string>
    <string name="menu_drink">Drink Log</string>
    <string name="menu_void">Void Log</string>
    <string name="void_volume_hint">Enter void volume (ml)</string>
    <string name="void_home">Home</string>
    <string name="void_work">Work</string>
    <string name="void_school">School</string>
    <string name="void_other">Other Location</string>
    <string name="void_location_not_picked">Pick your current location</string>
    <string name="void_location_picked">Your current location:</string>
    <string name="drink_log_direction">Fill in the amount of drink you had as well as its details</string>
    <string name="drink_log_drink_hint">Drink volume in mL</string>
    <string name="drink_log_caffeine_hint">Contains caffeine</string>
    <string name="drink_log_sugar_hint">Contains sugar</string>
...
