...
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp" android:layout_marginEnd="50dp"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="181dp"
            app:layout_constraintTop_toTopOf="parent" android:textSize="18sp"
            android:fontFamily="@font/roboto_mono_medium"/>
    <com.google.android.material.button.MaterialButton
            android:id="@+id/void_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:text="@string/menu_void"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
...
            app:layout_constraintBottom_toTopOf="@+id/meter_button"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:textAlignment="center"
            android:fontFamily="@font/roboto_mono_medium"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/settings_fab"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            app:srcCompat="@drawable/ic_settings_background_48dp"
            app:backgroundTint="@color/colorPrimary"
...
