<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".VoidLogFragment"
                                                   android:animateLayoutChanges="true">

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.491" app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/void_volume_hint"
            android:id="@+id/uid_textInputLayout"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="70dp" android:layout_marginStart="50dp" android:layout_marginEnd="50dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:fontFamily="@font/roboto_mono_medium"
                android:textSize="20sp" android:inputType="number" android:id="@+id/void_editText"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/home_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:text="@string/void_home"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp" android:layout_marginEnd="50dp"
            app:layout_constraintHorizontal_bias="1.0"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_mono_medium"
            app:layout_constraintBottom_toTopOf="@+id/work_button"
            android:layout_marginBottom="37dp"
            app:layout_constraintTop_toBottomOf="@+id/uid_textInputLayout" android:layout_marginTop="37dp"/>
    <com.google.android.material.button.MaterialButton
            android:id="@+id/work_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:text="@string/void_work"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp" android:layout_marginEnd="50dp"
            app:layout_constraintHorizontal_bias="1.0"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_mono_medium"
            app:layout_constraintBottom_toTopOf="@+id/school_button"
            app:layout_constraintTop_toBottomOf="@+id/home_button"
            android:layout_marginBottom="37dp"/>
    <com.google.android.material.button.MaterialButton
            android:id="@+id/other_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:text="@string/void_other"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp" android:layout_marginEnd="50dp"
            app:layout_constraintHorizontal_bias="1.0"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_mono_medium"
            app:layout_constraintBottom_toTopOf="@+id/save_button"
            app:layout_constraintTop_toBottomOf="@+id/school_button"
            android:layout_marginBottom="37dp"/>
    <com.google.android.material.button.MaterialButton
            android:id="@+id/school_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:text="@string/void_school"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp" android:layout_marginEnd="50dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_mono_medium"
            app:layout_constraintBottom_toTopOf="@+id/other_button"
            app:layout_constraintTop_toBottomOf="@+id/work_button"
            android:layout_marginBottom="37dp"/>
    <com.google.android.material.button.MaterialButton
            android:id="@+id/save_button"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:text="@string/app_save"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp" android:layout_marginEnd="50dp"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_mono_medium"
            android:layout_marginBottom="50dp" app:layout_constraintBottom_toBottomOf="parent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>